--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -47,9 +49,17 @@
     }
   ],
   "devDependencies": {
+    "@babel/core": "^7.17.10",
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.11",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "babel-loader": "^8.2.5",
     "husky": "^7.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -57,5 +67,6 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^3.9.10"
-  }
+  },
+  "dependencies": {}
 }
